Fix: bug fixes and improvments